<resources>
    <string name="app_name">Blazebooks</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="chapter">Chapter</string>
    <string name="synopsis_example">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</string>
    <string name="home_second">Home Second</string>
    <string name="nav_header_title">User</string>
    <string name="nav_header_subtitle">whoami@user.com</string>
    <string name="menu_home">Home</string>
    <string name="menu_books">Catalog</string>
    <string name="menu_about">About Us</string>
    <string name="new_books">New Books</string>
    <string name="all_books">All</string>
    <string name="interactive_books">Interactive</string>
    <string name="authors">Authors</string>
    <string name="genres">Genres</string>
    <string name="books">Books</string>
    <string name="my_account">My Account</string>
    <string name="recommendations">Recommendations</string>
    <string name="new_books_in_blazebooks">New in Blazebooks</string>
    <string name="fav_books">Fav Books</string>
    <string name="my_books">My Books</string>
    <string name="facebook_button">Go to Facebook</string>
    <string name="instagram_button">Go to Instagram</string>
    <string name="twiter_button">Go to Twitter</string>
    <string name="credits_title">Credits</string>
    <string name="become_author">Become Author</string>
    <string name="social_networks">Social Networks</string>
    <string name="about">About Blazebooks</string>
    <string name="credits">
        Developer I - Victor Develops  \n
        Developer II - Mounir Zbayr Samadi \n\n

        Sound Efects - Dirge Inferno \n\n
        Composer I - Victor Develops \n

        RESOURCES\n
        icons - prettycons from flaticon.com\n
        icons - Freepik from freepik.com\n
        Font - github.com/theleagueof/league-spartan
        Images - pixabay.com\n\n

        DEPENDENCIES\n
        Android-SpinKit\n
        Firebase\n
        Viewpager2\n
        Material\n
        Coil\n
        Epublib\n
        Kodein\n
        RxJava\n
        SQLite Room\n
        Airbnb Lottie Android\n\n
    </string>
    <string name="premium">PREMIUM</string>
    <string name="free">FREE</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_out">Logout</string>
    <string name="forgot_passwd">Forgot Password?</string>
    <string name="reset_passwd">Reset your password here</string>
    <string name="send_passwd">Send My Password</string>
    <string name="log_email_error">Please enter email</string>
    <string name="log_passwd_error">Password cannot be empty</string>
    <string name="log_general_error">Username or password incorrect!</string>
    <string name="log_dialog_email_sent">Email sent =)</string>
    <string name="log_dialog_email_error">Please, introduce your email account.</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_forgot_password">Forgot password?</string>
    <string name="login_login_button">Login</string>
    <string name="login_sign_up_button">Sign Up</string>
    <string name="google_auth_err">Google authentication error</string>
    <string name="google_access_button">Google Access Button</string>
    <string name="signin_username_error">Username cannot be empty</string>
    <string name="signin_passwd_empty">Password cannot be empty</string>
    <string name="signin_passwd_length">Password must be at least 6 characters long.</string>
    <string name="signin_passwd_not_match">Passwords don\'t match</string>
    <string name="signin_email_empty">Email cannot be empty</string>
    <string name="signin_email_not_valid">Please enter valid email</string>
    <string name="auth_fail">Authentication failed.</string>
    <string name="signin_sign_in_button">Sign Up</string>
    <string name="signin_go_back_button">Go Back</string>
    <string name="signin_email_hint">Email</string>
    <string name="signin_repeat_password_hint">Repeat Password</string>
    <string name="signin_password_hint">Password</string>
    <string name="signin_username_hint">Username</string>
    <string name="synopsis">Synopsis</string>
    <string name="chapters">Chapters</string>
    <string name="genre_show_book_activity">Genre:</string>
    <string name="chapters_show_book_activity">Chapters:</string>
    <string name="author_show_book_activity">Author:</string>
    <string name="not_dwnload_yet">Not downloaded yet</string>
    <string name="rm_favs">Removed from favs</string>
    <string name="add_favs">Added to favs</string>
    <string name="already_dwnload">Already downloaded</string>
    <string name="dwnloading">Downloading…</string>
    <string name="dwnload_cmplete">Download completed</string>
    <string name="dwnload_error">Download error</string>
    <string name="add_to_favs">Add to favs</string>
    <string name="download">Download</string>
    <string name="read">Read</string>
    <string name="readied">Readied</string>
    <string name="message_delete_book">Do you want to delete this book? This action can´t be undone.</string>
    <string name="cancel_delete_book">Cancel</string>
    <string name="accept_delete_book">Accept</string>
    <string name="looking_for">Looking for…</string>
    <string name="book_description">Book description</string>
    <string name="return_button">Return button</string>
    <string name="search_button">Search Button</string>
    <string name="filter_button">Filter Button</string>
    <string name="close_filter_dialog">CLose filter dialog</string>
    <string name="clear_button">Clear</string>
    <string name="apply_button">Apply</string>
    <string name="language">Language</string>
    <string name="language_summary">Choose your favorite language. Not all books has a version for all languages.</string>
    <string name="user_upperCase">USER</string>
    <string name="books_upperCase">BOOKS</string>
    <string name="fav_genres">Favorite Genres</string>
    <string name="fav_genres_summary">Choose your favorite genres. Help to us to recommend you better books.</string>
    <string name="fav_genres_dialog_title">Choose between…</string>
    <string name="read_mode">Read Mode</string>
    <string name="read_mode_summary">On/Off the read light filter.</string>
    <string name="sound">Sound</string>
    <string name="sound_summary">On/Off the sound and music.</string>
    <string name="should_restart">You should reload Blazebooks  =)</string>
    <string name="delete_account_dialog">Delete Account?</string>
    <string name="delete_account_dialog_desc">Do you want to delete your Blazebooks account? We will miss you :c</string>
    <string name="delete_account_dialog_confirm">Delete</string>
    <string name="delete_account_button">Cancel</string>
    <string name="delete_account_desc">Removes your BlazeBooks account and all your current subscriptions will be cancelled. We will miss you Y_Y</string>
    <string name="delete_account_tittle">Delete Account</string>
    <string name="profile_img_desc">Choose one!</string>
    <string name="profile_img_title">Profile Image</string>
    <string name="email_account_desc">Choose a new email for your account. This email is used to login.</string>
    <string name="email_account_title">Email</string>
    <string name="email_acount_dialog_title">New email</string>
    <string name="passwd_account_title">Password</string>
    <string name="paswd_account_text">Change your password. Make sure you write it well.</string>
    <string name="passwd_account_dialog_title">New password</string>
    <string name="username_account_title">Username</string>
    <string name="username_account_desc">Choose new username.</string>
    <string name="username_account_dialog_title">New username</string>
    <string name="premium_account_desc">Go to the next level! Become premium!</string>
    <string name="premium_account_title">Premium Account</string>
    <string name="premium_account_dialog_message">"You already have premium account. Do you want to change it?"</string>
    <string name="premium_account_dialog_free">Free Account</string>
    <string name="delete_premium_account">Delete Premium Account</string>
    <string name="delete_premium_account_desc">"Are you sure? This action can not be undone."</string>
    <string name="premium_account_deleted_message">You have a free account now.</string>
    <string name="confirm_button">OK</string>
    <string name="empty_text_err">Write something!</string>
    <string name="successful_operation">Success!</string>
    <string name="become_premium">Become Premium</string>
    <string name="button_Next_Page_Description">Next page</string>
    <string name="button_Previous_Page_Description">Previous page</string>
    <string name="pageNumber">%1$d/%2$d</string>
    <string name="yearly_plan_title">Yearly Plan</string>
    <string name="yearly_plan_desc">Enjoy Blazebooks for a year for less than what a book costs.</string>
    <string name="yearly_plan_price">9,99€</string>
    <string name="monthly_plan_title">Monthly Plan</string>
    <string name="monthly_plan_desc">Enjoy Blazebooks for a month for less than the price of a snack.</string>
    <string name="monthly_plan_price">0,99€</string>
    <string name="become_premium_benefits">Benefits</string>
    <string name="become_premium_benefits_one">Remove the limit of books you can store.</string>
    <string name="become_premium_benefits_two">Unlock all premium content!</string>
    <string name="become_premium_benefits_three">Special and personalized recommendations.</string>
    <string name="become_premium_benefits_four">Early Access.</string>
    <string name="free_plan_title">Free Plan</string>
    <string name="free_plan_desc_one">Limit the books you can store.</string>
    <string name="free_plan_desc_two">Premium content locked.</string>
    <string name="free_plan_desc_three">Special and personalized recommendations locked.</string>
    <string name="free_plan_desc_four">Early Access Locked.</string>
    <string name="free_plan_price">I prefer the free version :\'c</string>
    <string name="i_want_you">I want you</string>
    <string name="to_become_premium">To Become Premium</string>
    <string name="close_button">Close button</string>
    <string name="become_premium_promotional_one">Are you ready to start reading?</string>
    <string name="become_premium_promotional_two">Join those who already have!</string>
    <string name="wanna_be_premium">I want to be premium! :D</string>
    <string name="invalid_email_or_passwd">Invalid email or password.</string>
    <string-array name="fonts">
        <item>Arial</item>
        <item>Arial Narrow</item>
        <item>Verdana</item>
        <item>Trebuchet MS</item>
        <item>Gill Sans</item>
        <item>Noto Sans</item>
    </string-array>
</resources>