<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- Author: Victor Gonzalez -->
    <PreferenceCategory android:title="@string/user_upperCase">
        <ListPreference
            android:entries="@array/languages"
            android:entryValues="@array/languages"
            android:icon="@drawable/ic_languages"
            android:key="language"
            android:summary="@string/language_summary"
            android:title="@string/language" />
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/books_upperCase">
        <MultiSelectListPreference
            android:dialogTitle="@string/fav_genres_dialog_title"
            android:entries="@array/genres"
            android:entryValues="@array/genres"
            android:icon="@drawable/ic_books_stack"
            android:key="preferredGenres"
            android:summary="@string/fav_genres_summary"
            android:title="@string/fav_genres" />
        <SwitchPreference
            android:icon="@drawable/ic_read_mode"
            android:key="readMode"
            android:summary="@string/read_mode_summary"
            android:title="@string/read_mode" />
        <SwitchPreference
            android:icon="@drawable/ic_sound"
            android:key="soundMode"
            android:summary="@string/sound_summary"
            android:title="@string/sound" />
    </PreferenceCategory>

</PreferenceScreen>