<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.blazebooks.view.main.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home"/>

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.blazebooks.view.main.CatalogFragment"
        android:label="@string/menu_books"
        tools:layout="@layout/fragment_books" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.blazebooks.view.main.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about"
        />
</navigation>