<?xml version="1.0" encoding="utf-8"?><!--Author: Victor Gonzalez-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:id="@+id/becomePremiumFreeItemCV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/grayTransparent"
        app:cardCornerRadius="@dimen/round_corner_radious"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="10sp">

            <TextView
                android:id="@+id/becomePremiumFreePlan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:text="@string/become_premium_benefits"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="36sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:background="@color/grayTransparent"
                android:drawableStart="@drawable/ic_check"
                android:drawablePadding="10sp"
                android:text="@string/become_premium_benefits_one"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:background="@color/grayTransparent"
                android:drawableStart="@drawable/ic_check"
                android:drawablePadding="10sp"
                android:text="@string/become_premium_benefits_two"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:background="@color/grayTransparent"
                android:drawableStart="@drawable/ic_check"
                android:drawablePadding="10sp"
                android:text="@string/become_premium_benefits_three"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10sp"
                android:background="@color/grayTransparent"
                android:drawableStart="@drawable/ic_check"
                android:drawablePadding="10sp"
                android:text="@string/become_premium_benefits_four"
                android:textColor="@color/white"
                android:textSize="20sp" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>