<?xml version="1.0" encoding="utf-8"?><!--Author: Victor Gonzalez-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <androidx.cardview.widget.CardView
        android:id="@+id/becomePremiumMonthlyItemCV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/grayTransparent"
        app:cardCornerRadius="@dimen/round_corner_radious"
        app:cardElevation="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10sp">

            <TextView
                android:id="@+id/becomePremiumMonthlyPlan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monthly_plan_title"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="36sp" />

            <TextView
                android:id="@+id/becomePremiumMonthlyText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monthly_plan_desc"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/becomePremiumMonthlyBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40sp"
                android:layout_marginEnd="40sp"
                android:text="@string/monthly_plan_price"
                android:textAlignment="center"
                android:textSize="20sp" />


        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>